--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@docusaurus/theme-search-algolia": "^2.4.1",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
+    "@vercel/analytics": "^1.0.1",
+    "algoliasearch": "^4.17.2",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "react": "^18.0.0",
